# simple_editor

./: .gitmodules  README.md  jnigen.yaml  pubspec.yaml
filters/: color_grade_simple.json  fade_audio_in.json  fade_audio_out.json  fade_black_transition.json  fade_video_out.json  interpolate_video.json  map_hrd.json  strong_contrast_cc.json  strong_contrast_simple.json
lib/: main.dart
lib/audio/: tarsosdsp.dart
lib/pages/: audio_analysis.dart  audio_analysis_page.dart  clip_adjust_page.dart  clip_selection_page.dart  create_project_page.dart  error_page.dart  filter_page.dart  main_project_page.dart  new_project_page.dart  settings_page.dart  video_player.dart
lib/utils/: audio_data_loader.dart  backend_util.dart  beat_time_exporter.dart  cache_image_provider.dart  config.dart  config_util.dart  easy_edits_backend.dart  edit_util.dart  error_util.dart  exporter.dart  fast_edits_backend.dart  file_util.dart  frame_export_util.dart  load_audio_data.dart  log_util.dart  notifier.dart  preview_util.dart  transparent_image.dart
lib/widgets/: custom_video_controls.dart  dismissable_timestamp_tile.dart  easy_edits_app_bar.dart  file_drop.dart  lane_container.dart  snackbars.dart  styles.dart  time_line_painter.dart  time_stamp_painer.dart  time_stamp_widget.dart  timeline.dart  timeline_editor.dart  video_clip_container.dart  video_timeline.dart
src/de/yugata/: CMakeLists.txt  Fast-Edits.c
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+30 files in other folders)
